--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,11 @@
             <artifactId>el-ri</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
