--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,13 @@
             <version>4.0.3.RELEASE</version>
         </dependency>
         <!--For work with DataBase-->
-
+        <!--log4j-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <!--log4j-->
 
 
         <dependency>
