--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,13 @@
             <version>1.2.17</version>
         </dependency>
         <!--log4j-->
+        <!--joda-time-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <!--joda-time-->
 
 
         <dependency>
